# grid_quest

./: .gitignore  CMakeLists.txt  README.md  cmakelists-v3.txt  install_packages.sh  todos.txt
src/: main.c  styles.css
src/data/: easy_words.txt  get_words.c  hard_words.txt  medium_words.txt  users.txt
src/game/: game_logic.c
src/headers/: callbacks.h  file_utils.h  free_memory.h  game_logic.h  get_words.h  grid_utils.h  home_screen.h  login_utils.h  screens.h  time_converter.h  timer.h  typedefs.h  ui_logic.h  word_utils.h
src/ui/: css_provider.c  pages.c  ui_logic.c
src/ui/callbacks/: button_click.c  disable_buttons.c  free_memory.c  login.c  select_difficulty.c  start_game_again.c  timer.c  update_attempts.c
src/ui/dialog/: game_over_dialog.c
src/ui/screens/: add_words_screen.c  game_screen.c  home_screen.c  initialize_ui.c  login_screen.c  top_score_screen.c
src/utils/: file_utils.c  get_score.c  get_top_scores.c  grid_utils.c  login_utils.c  save_score.c  time_converter.c  username_taken.c  word_utils.c
